src/web/html/css/app.css
/* ... */
.teams {
  max-width: 100%;
}

.teams .profilePic {
  height: 45px;
  width: 45px;
  float: left;
  margin: 5px;
}

.publish-date {
  color: #535353;
  font-size: .75em;
  display: block;
}

.read-more {
  width: 100%;
  display: block;
  margin-bottom: 15px;
  overflow: hidden;
}

.read-more .button {
  width: 200px;
  float: right;
}

.micro-teaser {
  color: var(--f7-text-muted); /* Use muted text color */
  margin: 0 0 6px 0;          /* Space before main text */
  font-style: italic;         /* Optional: italicized for hint-like feel */
}

.small-font {
  font-size: .65em;
}

















.home-banner {
  display: flex;
}

.home-banner .left {
  flex: 0 0 50%;
}

.home-banner .right {
  flex:1;
} 

.home-banner img {
  display:block;
  width:100%;
}

.home-banner li {
  font-size: 16px;
}

@media only screen and (max-width: 1024px) {


  .home-banner {
    display: block;
  }

  .home-banner .left {
    width: 100%;
  }
  
  .home-banner .right {
    width: 100%;
  }

  .home-banner img {
    width:100%;
  }



}


.footer {
  text-align: center;
}

.footer ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.footer li {
  display: inline-block;
  margin-right: 10px;
  font-size: 14px;
}

